TsumitateNISATest now works

--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,23 @@ repositories {
     mavenCentral()
     mavenLocal()
 }
+ext {
+    slf4jVersion = '1.7.31'
+}
 
 dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.2'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.1.0'
-    implementation group: 'com.kazurayam', name: 'materialstore', version: '0.3.7'
+    implementation group: 'com.kazurayam', name: 'materialstore', version: '0.3.7-SNAPSHOT'
     implementation group: 'ru.yandex.qatools.ashot', name: 'ashot', version: '1.5.4'
     implementation group: 'io.github.java-diff-utils', name: 'java-diff-utils', version: '4.11'
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
+    implementation group: 'ru.yandex.qatools.ashot', name: 'ashot', version: "1.5.4"
+    implementation group: 'com.kazurayam', name: 'ashotwrapper', version: '0.1.1'
     implementation 'org.codehaus.groovy:groovy-all:2.4.20'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: "${slf4jVersion}"
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: "${slf4jVersion}"
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
