--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,11 @@ ext {
 dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.2'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.1.0'
-    implementation group: 'com.kazurayam', name: 'materialstore', version: '0.3.7-SNAPSHOT'
+    implementation group: 'com.kazurayam', name: 'materialstore', version: '0.3.8'
     implementation group: 'ru.yandex.qatools.ashot', name: 'ashot', version: '1.5.4'
     implementation group: 'io.github.java-diff-utils', name: 'java-diff-utils', version: '4.11'
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
+    implementation group: 'org.freemarker', name: 'freemarker', version: "2.3.31"
     implementation group: 'ru.yandex.qatools.ashot', name: 'ashot', version: "1.5.4"
     implementation group: 'com.kazurayam', name: 'ashotwrapper', version: '0.1.1'
     implementation 'org.codehaus.groovy:groovy-all:2.4.20'
